# AgenticGovernance-ArtemisCity

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Findoc.html  Findoc.nb.html  LICENSE  Makefile  Pipfile  README-Multi-Agent Coordination Platform (MCP)-1.eraserdiagram  README.md  SECURITY.md  SIMULATION DOC.ipynb  _config.yml  index.md  main 2.py  main.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-docker.txt  requirements.txt  setup.py  setup_secrets.sh  state_kernel.json
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/.circleci/: config.yml
.github/instructions/: *.instructions.md
.github/workflows/: ci.yml  jekyll-gh-pages.yml
Concept_Demos/: .vercelignore  Hebbian_Proto.html  README.md  atp-prototype.html  atp_prototype.html  atp_prototype.jsx  demo_artemis.py  demo_city_postal.py  demo_memory_integration.py  index.html  mail.py  main.py
app/: .env.example  hebbian_weights.py  main.py  package-lock.json  package.json  parser.py  requirements.txt
benchmarks/: bench_memory_ops.py
docs/: API_REFERENCE.md  ARCHITECTURE-Artemis City Multi-Agent Operating System-1.eraserdiagram  ARCHITECTURE.md  DEPLOYMENT.md  GOVERNANCE.md  LIVING_CITY.md  MEMORY_BUS.md
integration/: __init__.py  context_loader.py  memory_client.py  postal_service.py  trust_interface.py
interface/: artemis_cli.py
monitoring/: alerts.yml  docker-compose.monitoring.yml  prometheus.yml
scripts/: health_check.sh  seed_vector_store.py
src/: .env.example  .pylintrc  __init__.py  __main__.py  generator.py  hebbian_weights.py  main.py  manager.py  my_types.py  package-lock.json  requirements.txt  types.py
tests/: conftest.py  run_simulation.py  test_agent_registry.py  test_agent_routing 2.py  test_agent_routing.py  test_artemis_persona.py  test_atp.py  test_atp_metrics.py  test_atp_validator.py  test_base_agent.py  test_base_agent_compliance.py  test_context_loader.py  test_exceptions.py  test_governance.py  test_governance_monitor.py  test_guidelines_demo.py  test_hebbian_learning.py  test_hebbian_marketplace_vs_inference.py  test_hebbian_scoped_vs_coldstart.py  test_hebbian_sync.py  test_instruction_loader.py  test_memory_bus.py  test_memory_bus_integration.py  test_memory_client.py  test_memory_decay.py  test_memory_integration.py  test_sandbox.py  test_sandbox_city_sim.py  test_semantic_tagging.py  test_trust_interface.py  test_vector_store.py
(+151 files in other folders)
