[project]
name = "AgenticGovernance-ArtemisCity"
version = "0.3.0"
description = "Architectural framework for agentic reasoning with transparent, accountable action across distributed intelligence systems"
readme = "README"
requires-python = ">=3.10"

authors = [{name = "Prinston Palmer", email = "prinstonpalmer879@gmail.com"}]
license = {text = "MIT"}
keywords = ["agents", "ai", "agentic", "governance", "trust", "memory", "distributed-systems", "artificial-intelligence"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pyyaml>=6.0.1"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.5.0",
  "bandit>=1.7.0",
  "ipython>=8.18.0",
  "rich>=13.7.0",
]
docs = [
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.0.0",
  "mkdocstrings[python]>=0.24.0",
]
enhanced = [
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "click>=8.1.0",
  "prompt-toolkit>=3.0.0",
]

[project.urls]
Homepage = "https://www.artemiscity.com"
Documentation = "https://github.com/popvilla/artemis-city#readme"
Repository = "https://github.com/AgenticGovernace/AgenticGovernance-ArtemisCity"
Changelog = "https://github.com/popvilla/artemis-city/releases"
Issues = "https://github.com/AgenticGovernace/AgenticGovernance-ArtemisCity/issues"
Discussion = "https://github.com/AgenticGovernace/AgenticGovernance-ArtemisCity/discussions"

[project.scripts]
artemis-cli = "src.Kernel.artemis_cli.py"

[build-system]
requires = ["npm"]
build-backend = "npm run build"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
skip-string-normalization = false
exclude = ""

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["./tests"]
pythonpath = ["./.venv"]
